banner & action section complited

--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Frist Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/assignment.css">
 </head>
-<body>
-    <header>
-
+<body class=".raleway-normal">
+    <header class="bg-img">
+        <nav>
+            <h3>LOGO</h3>
+            <button id="text-primary" class="btn-primary">Sign Up</button>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                    <h1>Cool Dark UI Template for <br> 
+                        Webflow Agencies!<h1>
+                        <button class="btn-secondary">Stay Focusd</button>
+            </div>
+        </div>
     </header>
     <main>
-
+        <div class="action-section">
+            <div class="action-content">
+                    <h2 class="action-title">See it in Action</h2>
+                    <p class=".action-p">Expore the live preview and imagine your <br>
+                    brand in this bold new look</p>
+                    <button class="btn-Third"> Launch Live Preview</button>
+            </div>
+            <img class="action-img" src="../First-Assignment/Assets/wc-mini.png" alt="">
+        </div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
