productive-user section completed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Frist Assignment</title>
+    <title>My First Assignment</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <div class="banner-content">
                     <h1>Cool Dark UI Template for <br> 
                         Webflow Agencies!<h1>
-                        <button class="btn-secondary">Stay Focusd</button>
+                        <button class="btn-secondary">Stay Focused</button>
             </div>
         </div>
     </header>
@@ -27,11 +27,30 @@
         <div class="action-section">
             <div class="action-content">
                     <h2 class="action-title">See it in Action</h2>
-                    <p class=".action-p">Expore the live preview and imagine your <br>
+                    <p class=".action-p">Explore the live preview and imagine your <br>
                     brand in this bold new look</p>
                     <button class="btn-Third"> Launch Live Preview</button>
             </div>
             <img class="action-img" src="../First-Assignment/Assets/wc-mini.png" alt="">
+        </div>
+        <section class="productive-users third-bg">
+                <h3 class="section-title">Joined Thousand of Productive Users</h3>
+                <div class="productive-user">
+                    <div class="porductive-user">
+                        <p class="productive-title">50K</p>
+                        <p class="productive-description">Active Users</p>
+                    </div>
+                    <div class="porductive-user">
+                        <p class="productive-title">2M+</p>
+                        <p class="productive-description">Focus Session</p>
+                    </div>
+                    <div class="porductive-user">
+                        <p class="productive-title">95%</p>
+                        <p class="productive-description">Satisfiction Rate</p>
+                    </div>
+                
+                </div>
+        </section>
         </div>
     </main>
     <footer>
