--- a/index.html
+++ b/index.html
@@ -52,6 +52,55 @@
                 </div>
         </section>
         </div>
+        <h3 class="user">What our users say</h3>
+        <section class="card-container">
+            <div class="card">
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <h3>Loved by Designers</h3>
+                <p>This template instatly leveld up <br> 
+                    our presence."- Studio Vertex</p>
+                <div class="reviewer">
+                        <img class="reviwer-img" src="./Assets/avatar.png" alt="">
+                <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <h4 class="reviewer-img-date">Date</h4>
+                </div>                
+        </div>    
+            <div class="card">
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <h3>Loved by Designers</h3>
+                <p>This template instatly leveld up <br> 
+                    our presence."- Studio Vertex</p>
+                <div class="reviewer">
+                        <img class="reviwer-img" src="./Assets/avatar.png" alt="">
+                <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <h4 class="reviewer-img-date">Date</h4>
+                </div>                
+        </div>    
+            <div class="card">
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <h3>Loved by Designers</h3>
+                <p>This template instatly leveld up <br> 
+                    our presence."- Studio Vertex</p>
+                <div class="reviewer">
+                        <img class="reviwer-img" src="./Assets/avatar.png" alt="">
+                <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <h4 class="reviewer-img-date">Date</h4>
+                </div>                
+        </div>    
+        </section>
+        
     </main>
     <footer>
 
