--- a/index.html
+++ b/index.html
@@ -100,7 +100,24 @@
                 </div>                
         </div>    
         </section>
-        
+        <section class="get-touch">
+            <h1 class="form-title">Let's Get in <br> Touch</h1>
+            <form class="form-label">
+                <label for="Email">Email</label>
+                <br>
+                <input type="Email" placeholder="example@emal.com">
+                <br>
+                <label for="">Name</label>
+                <br>
+                <input type="text" placeholder="full name">
+                <br>
+                <label for="">Message</label>
+                <br>
+                <textarea cols="50" rows="5" placeholder="write your message"></textarea>
+                <br>
+                <button class="btn-fourth">Get in Touch</button>
+            </form>
+        </section>
     </main>
     <footer>
 
