Footer section added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="porductive-user">
                         <p class="productive-title">95%</p>
-                        <p class="productive-description">Satisfiction Rate</p>
+                        <p class="productive-description">Satisfaction Rate</p>
                     </div>
                 
                 </div>
@@ -61,11 +61,12 @@
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
                 <h3>Loved by Designers</h3>
-                <p>This template instatly leveld up <br> 
+                <p>This template instantly leveled up <br> 
                     our presence."- Studio Vertex</p>
                 <div class="reviewer">
                         <img class="reviwer-img" src="./Assets/avatar.png" alt="">
                 <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <br>
                 <h4 class="reviewer-img-date">Date</h4>
                 </div>                
         </div>    
@@ -76,11 +77,12 @@
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
                 <h3>Loved by Designers</h3>
-                <p>This template instatly leveld up <br> 
+                <p>This template instantly leveled up <br> 
                     our presence."- Studio Vertex</p>
                 <div class="reviewer">
                         <img class="reviwer-img" src="./Assets/avatar.png" alt="">
                 <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <br>
                 <h4 class="reviewer-img-date">Date</h4>
                 </div>                
         </div>    
@@ -91,11 +93,12 @@
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
                 <h3>Loved by Designers</h3>
-                <p>This template instatly leveld up <br> 
+                <p>This template instantly leveled up <br> 
                     our presence."- Studio Vertex</p>
                 <div class="reviewer">
                         <img class="reviwer-img" src="./Assets/avatar.png" alt="">
                 <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <br>
                 <h4 class="reviewer-img-date">Date</h4>
                 </div>                
         </div>    
@@ -118,9 +121,25 @@
                 <button class="btn-fourth">Get in Touch</button>
             </form>
         </section>
+        <section>
+                <div class="footer-title"><h1>LOGO</h1></div>
+            <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div class="link">
+            <a href="">Home</a></section>
+            <a href="">About</a></section>
+            <a href="">How it works</a></section>
+            <a href="">services</a></section></div>
+            
     </main>
     <footer>
-
+            <!-- <section>
+                <div class="footer-title"><h1>LOGO</h1></div>
+            <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div></div>
+            <a href="">Home</a></section>
+            <a href="">About</a></section>
+            <a href="">How it works</a></section>
+            <a href="">services</a></section> -->
     </footer>
 </body>
 </html>
