--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
                 <button class="btn-fourth">Get in Touch</button>
             </form>
         </section>
-        <section>
+        <section class="footer-section">
                 <div class="footer-title"><h1>LOGO</h1></div>
             <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
-            <div class="link">
-            <a href="">Home</a></section>
-            <a href="">About</a></section>
-            <a href="">How it works</a></section>
-            <a href="">services</a></section></div>
+            <a class="footer-link" href="">Home</a>
+            <a class="footer-link" href="">About</a>
+            <a class="footer-link" href="">How it works</a>
+            <a class="footer-link" href="">services</a> 
+        </section>
             
     </main>
     <footer>
