Ready to focusd better added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     brand in this bold new look</p>
                     <button class="btn-Third"> Launch Live Preview</button>
             </div>
-            <img class="action-img" src="../First-Assignment/Assets/wc-mini.png" alt="">
+            <img class="action-img" src="./Assets/wc-mini.png" alt="">
         </div>
         <section class="productive-users third-bg">
                 <h3 class="section-title">Joined Thousand of Productive Users</h3>
@@ -60,14 +60,14 @@
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
-                <h3>Loved by Designers</h3>
+                <h3 class="card-title">Loved by Designers</h3>
                 <p>This template instantly leveled up <br> 
                     our presence."- Studio Vertex</p>
                 <div class="reviewer">
                         <img class="reviwer-img" src="./Assets/avatar.png" alt="">
-                <h4 class="reviewer-img-title">Reviewer Name</h4>
-                <br>
-                <h4 class="reviewer-img-date">Date</h4>
+                <div>
+                    <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <h4 class="reviewer-img-date">Date</h4></div>
                 </div>                
         </div>    
             <div class="card">
@@ -76,14 +76,15 @@
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
-                <h3>Loved by Designers</h3>
+                <h3 class="card-title" >Loved by Designers</h3>
                 <p>This template instantly leveled up <br> 
                     our presence."- Studio Vertex</p>
                 <div class="reviewer">
                         <img class="reviwer-img" src="./Assets/avatar.png" alt="">
-                <h4 class="reviewer-img-title">Reviewer Name</h4>
-                <br>
-                <h4 class="reviewer-img-date">Date</h4>
+                <div>
+                    <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <h4 class="reviewer-img-date">Date</h4></div>
+                </div>
                 </div>                
         </div>    
             <div class="card">
@@ -92,21 +93,28 @@
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
                 <img src="./Assets/icon-star.png" alt=""> 
-                <h3>Loved by Designers</h3>
+                <h3 class="card-title">Loved by Designers</h3>
                 <p>This template instantly leveled up <br> 
                     our presence."- Studio Vertex</p>
                 <div class="reviewer">
                         <img class="reviwer-img" src="./Assets/avatar.png" alt="">
-                <h4 class="reviewer-img-title">Reviewer Name</h4>
-                <br>
-                <h4 class="reviewer-img-date">Date</h4>
+                <div>
+                    <h4 class="reviewer-img-title">Reviewer Name</h4>
+                <h4 class="reviewer-img-date">Date</h4></div>
+                </div>
                 </div>                
         </div>    
         </section>
+        <section class="focus-better">
+                <h2 class="focus-title">Ready to Focus better</h2>
+                <p class="focus-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="focus-btn">Get Started Free</button>
+                <div class="focus-img"><img src="./Assets/wc-big.png" alt=""></div>
+        </section>
         <section class="get-touch">
             <h1 class="form-title">Let's Get in <br> Touch</h1>
-            <form class="form-label">
-                <label for="Email">Email</label>
+            <form class="form-input">
+                <label for="">Email</label>
                 <br>
                 <input type="Email" placeholder="example@emal.com">
                 <br>
@@ -116,30 +124,25 @@
                 <br>
                 <label for="">Message</label>
                 <br>
-                <textarea cols="50" rows="5" placeholder="write your message"></textarea>
+                <textarea cols="30" rows="100" placeholder="write your message"></textarea>
                 <br>
-                <button class="btn-fourth">Get in Touch</button>
+                <input class="focus-btn" type="submit" value="Gei in Touch">
             </form>
         </section>
         <section class="footer-section">
                 <div class="footer-title"><h1>LOGO</h1></div>
             <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
-            <a class="footer-link" href="">Home</a>
-            <a class="footer-link" href="">About</a>
-            <a class="footer-link" href="">How it works</a>
-            <a class="footer-link" href="">services</a> 
+            <div class="footer-container">
+                <a class="footer-link" href="">Home</a>
+                <a class="footer-link" href="">About</a>
+                <a class="footer-link" href="">How it works</a>
+                <a class="footer-link" href="">services</a> 
+            </div>
         </section>
             
     </main>
     <footer>
-            <!-- <section>
-                <div class="footer-title"><h1>LOGO</h1></div>
-            <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
-            <div></div>
-            <a href="">Home</a></section>
-            <a href="">About</a></section>
-            <a href="">How it works</a></section>
-            <a href="">services</a></section> -->
+            
     </footer>
 </body>
 </html>
