--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
                 <button class="focus-btn">Get Started Free</button>
                 <div class="focus-img"><img src="./Assets/wc-big.png" alt=""></div>
         </section>
-        <section class="get-touch">
+        <div class="footer-column">
             <h1 class="form-title">Let's Get in <br> Touch</h1>
+        </div>
+        <div class="footer-column">
             <form class="form-input">
                 <label for="">Email</label>
                 <br>
@@ -126,9 +128,9 @@
                 <br>
                 <textarea cols="30" rows="100" placeholder="write your message"></textarea>
                 <br>
-                <input class="focus-btn" type="submit" value="Gei in Touch">
+                <input class="focus-btn" type="submit" value="Get in Touch">
             </form>
-        </section>
+        </div>
         <section class="footer-section">
                 <div class="footer-title"><h1>LOGO</h1></div>
             <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
@@ -138,8 +140,7 @@
                 <a class="footer-link" href="">How it works</a>
                 <a class="footer-link" href="">services</a> 
             </div>
-        </section>
-            
+        </section>  
     </main>
     <footer>
             
