--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/assignment.css">
 </head>
-<body class=".raleway-normal">
+<body class="inter">
     <header class="bg-img">
         <nav>
             <h3>LOGO</h3>
@@ -63,12 +63,15 @@
                 <h3 class="card-title">Loved by Designers</h3>
                 <p>This template instantly leveled up <br> 
                     our presence."- Studio Vertex</p>
-                <div class="reviewer">
+                    <div class="client">
+                        <!-- <div class="reviewer"> -->
                         <img class="reviwer-img" src="./Assets/avatar.png" alt="">
                 <div>
                     <h4 class="reviewer-img-title">Reviewer Name</h4>
                 <h4 class="reviewer-img-date">Date</h4></div>
-                </div>                
+                </div>  
+                    </div>
+                              
         </div>    
             <div class="card">
                 <img src="./Assets/icon-star.png" alt=""> 
@@ -111,14 +114,15 @@
                 <button class="focus-btn">Get Started Free</button>
                 <div class="focus-img"><img src="./Assets/wc-big.png" alt=""></div>
         </section>
-        <div class="footer-column">
+        <div class="contact-container">
+            <div class="footer-column">
             <h1 class="form-title">Let's Get in <br> Touch</h1>
         </div>
         <div class="footer-column">
             <form class="form-input">
                 <label for="">Email</label>
                 <br>
-                <input type="Email" placeholder="example@emal.com">
+                <input type="Email" placeholder="example@email.com">
                 <br>
                 <label for="">Name</label>
                 <br>
@@ -131,6 +135,8 @@
                 <input class="focus-btn" type="submit" value="Get in Touch">
             </form>
         </div>
+        </div>
+        
         <section class="footer-section">
                 <div class="footer-title"><h1>LOGO</h1></div>
             <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
