--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <section class="productive-users third-bg">
                 <h3 class="section-title">Joined Thousand of Productive Users</h3>
-                <div class="productive-user">
+                <div class="productive-container">
                     <div class="porductive-user">
                         <p class="productive-title">50K</p>
                         <p class="productive-description">Active Users</p>
@@ -70,8 +70,7 @@
                     <h4 class="reviewer-img-title">Reviewer Name</h4>
                 <h4 class="reviewer-img-date">Date</h4></div>
                 </div>  
-                    </div>
-                              
+                </div>                 
         </div>    
             <div class="card">
                 <img src="./Assets/icon-star.png" alt=""> 
@@ -136,7 +135,6 @@
             </form>
         </div>
         </div>
-        
         <section class="footer-section">
                 <div class="footer-title"><h1>LOGO</h1></div>
             <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
